--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Hoang Long NGUYEN</title>
@@ -22,6 +22,9 @@
             <h1><a href="index.html">Hoang Long NGUYEN</a></h1>
             <h2>Personal profile</h2>
           </div>
+          <div id="logo_image">
+            <img src="photo.JPG" alt="Photo" />
+          </div>
         </div>
         <div id="menubar">
           <ul id="menu">
@@ -35,126 +38,124 @@
         </div>
       </div>
       <div id="site_content">
-        <div id="content">
-          <section>
+        <main id="content">
+          <section class="cv-section">
             <h2>Education</h2>
-            <div class="edu-item">
-              <div class="row">
-                <strong>Hong Duc University</strong>, Thanh Hoa, Vietnam
-                <span class="right">12/2022 | 09/2024</span>
+
+            <article class="edu-item">
+              <header class="item-header">
+                <span class="item-title">Hong Duc University</span>
+                <span class="item-meta"
+                  >Thanh Hoa, Vietnam | 12/2022 – 09/2024</span
+                >
+              </header>
+              <div class="item-subheader">
+                <span>Master in Computer Science</span>
+                <span class="item-meta">GPA: 3.80 / 4.00</span>
               </div>
-              <div class="row">
-                Master in Computer Science
-                <span class="right">Cumulative GPA: 3.80/4.00</span>
-              </div>
-              <div class="detail">
+              <p class="item-detail">
                 Thesis Title: Research on improving deep learning models to
                 improve the efficiency of polyp segmentation on endoscopic
                 images.
-              </div>
-            </div>
+              </p>
+            </article>
 
-            <div class="edu-item">
-              <div class="row">
-                <strong>Hong Duc University</strong>, Thanh Hoa, Vietnam
-                <span class="right">09/2018 | 06/2022</span>
+            <article class="edu-item">
+              <header class="item-header">
+                <span class="item-title">Hong Duc University</span>
+                <span class="item-meta"
+                  >Thanh Hoa, Vietnam | 09/2018 – 06/2022</span
+                >
+              </header>
+              <div class="item-subheader">
+                <span>Bachelor in Information Technology</span>
+                <span class="item-meta">GPA: 3.90 / 4.00</span>
               </div>
-              <div class="row">
-                Bachelor in Information Technology
-                <span class="right">Cumulative GPA: 3.90/4.00</span>
-              </div>
-              <div class="detail">
+              <p class="item-detail">
                 Thesis Title: Research and design a mobile application to
                 classify rice diseases using convolutional neural networks.
-              </div>
-            </div>
+              </p>
+            </article>
           </section>
 
-          <section>
+          <section class="cv-section">
             <h2>Academic Experience</h2>
 
-            <div class="exp-item">
-              <div class="row">
-                <strong
-                  >Faculty of Engineering, Technology, and Communication, Hong
-                  Duc University</strong
-                >
-                <span class="right">Thanh Hoa, Vietnam</span>
+            <article class="exp-item">
+              <header class="item-header">
+                <span class="item-title">
+                  Faculty of Engineering, Technology, and Communication, Hong
+                  Duc University
+                </span>
+                <span class="item-meta">Thanh Hoa, Vietnam</span>
+              </header>
+              <div class="item-subheader">
+                <span class="item-role">Lecturer</span>
+                <span class="item-meta">06/2024 – Present</span>
               </div>
-              <div class="row">
-                <em>Lecturer</em>
-                <span class="right">06/2024 | Present</span>
-              </div>
-              <ul>
+              <ul class="item-list">
                 <li>
-                  Teaching Basic Programming with C++, Object Oriented
-                  Programming with Python and Java, Web and Mobile Application
-                  Programming.
+                  Teaching programming courses in C++, Python, Java, and
+                  Web/Mobile development.
                 </li>
                 <li>Building a Vietnamese Image Captioning dataset.</li>
                 <li>
-                  Working with medical image fusion using CNN and Transformer
-                  models.
+                  Conducting research on medical image fusion using CNN and
+                  Transformer models.
                 </li>
               </ul>
-            </div>
+            </article>
 
-            <div class="exp-item">
-              <div class="row">
-                <strong
-                  >Center of Information and Communication Technologies, Hong
-                  Duc University</strong
-                >
-                <span class="right">Thanh Hoa, Vietnam</span>
+            <article class="exp-item">
+              <header class="item-header">
+                <span class="item-title">
+                  Center of Information and Communication Technologies, Hong Duc
+                  University
+                </span>
+                <span class="item-meta">Thanh Hoa, Vietnam</span>
+              </header>
+              <div class="item-subheader">
+                <span class="item-role">AI Researcher</span>
+                <span class="item-meta">10/2022 – 06/2024</span>
               </div>
-              <div class="row">
-                <em>AI Researcher</em>
-                <span class="right">10/2022 | 06/2024</span>
-              </div>
-              <ul>
+              <ul class="item-list">
                 <li>
-                  Worked with medical image fusion using CNN and Transformer
-                  models.
+                  Developed medical image fusion methods using CNN and
+                  Transformer architectures.
                 </li>
                 <li>
-                  Performed medical image fusion approaches based on
-                  optimization algorithm.
+                  Applied optimization-based approaches for medical image
+                  fusion.
                 </li>
                 <li>
-                  Proposed a new deep learning model for polyp segmentation from
-                  colonoscopy images.
+                  Proposed a novel deep learning model for polyp segmentation.
                 </li>
-                <li>Researched about image captioning methods.</li>
                 <li>
-                  Evaluated data clustering performance of deep learning models.
+                  Conducted research on image captioning and data clustering.
                 </li>
-                <li>Studied data clustering methods.</li>
               </ul>
-            </div>
+            </article>
 
-            <div class="exp-item">
-              <div class="row">
-                <strong>ThinkLABs JSC</strong>
-                <span class="right">Thanh Hoa, Vietnam</span>
+            <article class="exp-item">
+              <header class="item-header">
+                <span class="item-title">ThinkLABs JSC</span>
+                <span class="item-meta">Thanh Hoa, Vietnam</span>
+              </header>
+              <div class="item-subheader">
+                <span class="item-role">Programmer</span>
+                <span class="item-meta">10/2021 – 10/2022</span>
               </div>
-              <div class="row">
-                <em>Programmer</em>
-                <span class="right">10/2021 | 10/2022</span>
-              </div>
-              <ul>
-                <li>Worked with deep learning models on object detection.</li>
+              <ul class="item-list">
+                <li>Worked on object detection using deep learning models.</li>
                 <li>
-                  Enhanced performance of camera surveillance systems based on
-                  YOLOs.
+                  Improved surveillance camera systems based on YOLO
+                  architectures.
                 </li>
-                <li>Studied text extraction using OCR with CNN models.</li>
-                <li>
-                  Studied about computer vision and artificial intelligence.
-                </li>
+                <li>Researched OCR techniques using CNN-based approaches.</li>
               </ul>
-            </div>
+            </article>
           </section>
-        </div>
+        </main>
       </div>
       <div id="footer"></div>
     </div>
