--- a/programming.html
+++ b/programming.html
@@ -22,6 +22,9 @@
             <h1><a href="index.html">Hoang Long NGUYEN</a></h1>
             <h2>Personal profile</h2>
           </div>
+          <div id="logo_image">
+            <img src="photo.JPG" alt="Photo" />
+          </div>
         </div>
         <div id="menubar">
           <ul id="menu">
@@ -50,7 +53,7 @@
                 <em>Key member</em>
                 <span style="float: right"><em>Finished</em></span>
               </li>
-              <li>
+              <!-- <li>
                 <strong
                   >Developing an AI-assisted system to detect plastic waste at
                   Ben En National Park.</strong
@@ -58,7 +61,7 @@
                 <span style="float: right">Thanh Hoa, Vietnam</span><br />
                 <em>Key member</em>
                 <span style="float: right"><em>Finished</em></span>
-              </li>
+              </li> -->
               <li>
                 <strong
                   >Developing optimal models for medical image
