--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Hoang Long NGUYEN</title>
@@ -15,6 +15,16 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
     />
+    <style>
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
 
   <body>
@@ -62,21 +72,32 @@
           <div id="content">
             <ul>
               <li>
-                <i class="fas fa-envelope"></i> longnguyenhoang.ict@gmail.com
-              </li>
-              <li>
-                <i class="fas fa-envelope"></i> nguyenhoanglong@hdu.edu.vn
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:longnguyenhoang.ict@gmail.com"
+                  >longnguyenhoang.ict@gmail.com</a
+                >
+                |
+                <a href="mailto:nguyenhoanglong@hdu.edu.vn"
+                  >nguyenhoanglong@hdu.edu.vn</a
+                >
+                |
+                <a href="mailto:hnguyen@univ-tours.fr">hnguyen@univ-tours.fr</a>
               </li>
               <li><i class="fas fa-phone"></i> (+84) 948.241.236</li>
               <li><i class="fas fa-map-marker-alt"></i> Thanh Hoa, Viet Nam</li>
               <li>
                 <a href="https://www.facebook.com/nguyenlong.crazy/">
-                  <i class="fab fa-facebook"></i> Long Nguyen
+                  <i class="fab fa-facebook"></i> Long NH
                 </a>
               </li>
               <li>
                 <a href="https://github.com/long-nguyen12">
                   <i class="fab fa-github"></i> long-nguyen12
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/longnh12/">
+                  <i class="fab fa-linkedin"></i> Long Nguyen Hoang
                 </a>
               </li>
             </ul>
