--- a/misc.html
+++ b/misc.html
@@ -22,6 +22,9 @@
             <h1><a href="index.html">Hoang Long NGUYEN</a></h1>
             <h2>Personal profile</h2>
           </div>
+          <div id="logo_image">
+            <img src="photo.JPG" alt="Photo" />
+          </div>
         </div>
         <div id="menubar">
           <ul id="menu">
