update new version

--- a/index.html
+++ b/index.html
@@ -1,110 +1,218 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
-    <title>Hoang Long NGUYEN</title>
-    <meta name="description" content="website description" />
-    <meta name="keywords" content="website keywords, website keywords" />
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="style/style.css"
-      title="style"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      rel="stylesheet"
-    />
-    <style>
-      a {
-        color: inherit;
-        text-decoration: none;
-      }
+    <!-- begin SEO -->
+    <title>Hoang Long Nguyen | Hoang Long Nguyen</title>
+    <meta name="title" content="Hoang Long Nguyen" />
 
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <meta property="og:title" content="Hoang Long Nguyen" />
+    <meta property="og:site_name" content="Hoang Long Nguyen" />
+    <meta
+      property="og:description"
+      content="Hoang Long Nguyen | Personal Website"
+    />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:url" content="/" />
+    <meta property="og:type" content="website" />
+    <meta property="twitter:title" content="Hoang Long Nguyen" />
+
+    <meta name="description" content="Hoang Long Nguyen | Personal Website" />
+    <meta name="keywords" content="Hoang Long Nguyen, Personal, Website" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="/" />
+    <meta name="language" content="EN" />
+    <meta name="revisit-after" content="30 days" />
+    <meta name="author" content="Hoang Long Nguyen" />
+    <!-- end SEO -->
+
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="/assets/vendor/bootstrap/css/bootstrap.min.css"
+    />
+    <link href="/assets/css/main.css" rel="stylesheet" />
+    <link href="/assets/css/home.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/css/fontawesome651.all.min.css" />
+
+    <!-- Google Fonts CSS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <div id="main">
-      <div id="header">
-        <div id="logo">
-          <div id="logo_text">
-            <h1><a href="index.html">Hoang Long NGUYEN</a></h1>
-            <h2>Personal profile</h2>
+    <div id="page-container">
+      <header-component></header-component>
+
+      <div class="container mt-4">
+        <div class="mb-4"></div>
+
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              class="rounded-circle mx-auto d-block mb-1"
+              style="
+                border: solid rgba(0, 119, 182, 0.8) 2px;
+                width: 60%;
+                max-width: 250px;
+              "
+              src="/assets/img/photo.JPG"
+              alt="Card image cap"
+            />
+
+            <div class="card-body">
+              <h4
+                class="text-center mb-0"
+                style="
+                  color: var(--blue-medium);
+                  font-family: &quot;Ubuntu Sans&quot;, sans-serif;
+                  font-size: 1.75rem;
+                "
+              >
+                Hoang Long Nguyen
+              </h4>
+
+              <ul class="social-icons pl-5 pl-md-0">
+                <li class="pl-4 pl-md-5">
+                  <a href="#" target="">
+                    <i class="mr-3 fa-fw fa-solid fa-location-dot"></i>
+                    Thanh Hoa, Vietnam
+                  </a>
+                </li>
+                <li class="pl-4 pl-md-5">
+                  <a href="#" target="">
+                    <i class="mr-3 fa fa-fw fa-school"></i>
+                    Hong Duc University | University of Tours
+                  </a>
+                </li>
+                <li class="pl-4 pl-md-5">
+                  <a href="https://long-nguyen12.github.io" target="_blank">
+                    <i class="mr-3 fa-fw fa-solid fa-globe"></i>
+                    long-nguyen12.github.io
+                  </a>
+                </li>
+                <li class="pl-4 pl-md-5">
+                  <a href="mailto:longnguyenhoang.ict@gmail.com">
+                    <i class="mr-3 fa-fw fa-regular fa-envelope"></i>
+                    longnguyenhoang.ict@gmail.com
+                  </a>
+                  |
+                  <a href="mailto:nguyenhoanglong@hdu.edu.vn"
+                    >nguyenhoanglong@hdu.edu.vn</a
+                  >
+                </li>
+                <li class="pl-4 pl-md-5">
+                  <a
+                    href="https://scholar.google.com/citations?user=Ijeon7UAAAAJ&hl=en&authuser=3"
+                    target="_blank"
+                  >
+                    <i class="mr-3 fa-fw fa-brands fa-google-scholar"></i>
+                    Google Scholar
+                  </a>
+                </li>
+                <li class="pl-4 pl-md-5">
+                  <a
+                    href="https://www.researchgate.net/profile/Hoang-Long-Nguyen-12?ev=hdr_xprf"
+                    target="_blank"
+                  >
+                    <i class="mr-3 fa-fw fa-brands fa-researchgate"></i>
+                    ResearchGate
+                  </a>
+                </li>
+                <li class="pl-4 pl-md-5">
+                  <a
+                    href="https://orcid.org/0009-0003-2327-4178"
+                    target="_blank"
+                  >
+                    <i class="mr-3 fa-fw fa-brands fa-orcid"></i>
+                    ORCID
+                  </a>
+                </li>
+                <li class="pl-4 pl-md-5">
+                  <a
+                    href="https://www.linkedin.com/in/longnh12/"
+                    target="_blank"
+                  >
+                    <i class="mr-3 fab fa-fw fa-linkedin"></i>
+                    LinkedIn
+                  </a>
+                </li>
+                <li class="pl-4 pl-md-5">
+                  <a href="https://github.com/long-nguyen12" target="_blank">
+                    <i class="mr-3 fab fa-fw fa-github"></i>
+                    Github
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div id="logo_image">
-            <img src="photo.JPG" alt="Photo" />
+
+          <div class="col-sm-8">
+            <h4 class="font-weight-bold">About Me</h4>
+            <p class="mb-4 text-justify">
+              I’m a computer vision and deep learning researcher with strong
+              expertise in AI and software engineering. I’m currently pursuing a
+              PhD at Polytech Tours, France, where I develop automated
+              fact-checking applications. Alongside my research, I’ve been a
+              lecturer at the Faculty of Engineering, Technology, and
+              Communication, Hong Duc University since October 2025.
+            </p>
+
+            <h4 class="mt-4 font-weight-bold">Research motivation</h4>
+            <p class="text-justify">
+              My research is driven by a passion for leveraging AI to solve
+              real-world problems. I’m particularly interested in developing
+              applications that can enhance information integrity and combat
+              misinformation. Through my work, I aim to contribute to the
+              advancement of AI technologies while addressing critical societal
+              challenges.
+            </p>
+
+            <h4 class="mt-4 font-weight-bold">Research interests</h4>
+            <p class="text-justify">
+              My research interests include computer vision, deep learning,
+              automated fact-checking, and natural language processing. I’m
+              particularly focused on developing innovative algorithms and
+              applications that can improve the accuracy and efficiency of
+              information verification processes.
+            </p>
+
+            <!-- <div class="text-center">
+              <a
+                class="mt-2 btn btn-blue btn-sm"
+                href="https://www.rfai.lifat.univ-tours.fr/"
+                target="_blank"
+              >
+                RFAI <i class="ml-2 fa-solid fa-globe"></i>
+              </a>
+            </div> -->
           </div>
-        </div>
-        <div id="menubar">
-          <ul id="menu">
-            <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-            <li class="selected"><a href="index.html">Home</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="publication.html">Publications</a></li>
-            <li><a href="programming.html">Programming</a></li>
-            <li><a href="misc.html">Misc</a></li>
-          </ul>
         </div>
       </div>
-      <div id="site_content">
-        <div id="content">
-          <!-- insert the page content here -->
-          <h1>About me</h1>
-          <p>
-            I’m a computer vision and deep learning researcher with strong
-            expertise in AI and software engineering. I’m currently pursuing a
-            PhD at Polytech Tours, France, where I develop automated
-            fact-checking applications. Alongside my research, I’ve been a
-            lecturer at the Faculty of Engineering, Technology, and
-            Communication, Hong Duc University since October 2025, teaching and
-            mentoring students in advanced computing. Previously, I worked as an
-            AI and Software Engineer at ThinkLabs JSC, contributing to the
-            design and deployment of AI-powered products.
-          </p>
-        </div>
-        <div id="content">
-          <!-- insert the page content here -->
-          <h1>Contact</h1>
-          <div id="content">
-            <ul>
-              <li>
-                <i class="fas fa-envelope"></i>
-                <a href="mailto:longnguyenhoang.ict@gmail.com"
-                  >longnguyenhoang.ict@gmail.com</a
-                >
-                |
-                <a href="mailto:nguyenhoanglong@hdu.edu.vn"
-                  >nguyenhoanglong@hdu.edu.vn</a
-                >
-                |
-                <a href="mailto:hnguyen@univ-tours.fr">hnguyen@univ-tours.fr</a>
-              </li>
-              <li><i class="fas fa-phone"></i> (+84) 948.241.236</li>
-              <li><i class="fas fa-map-marker-alt"></i> Thanh Hoa, Viet Nam</li>
-              <li>
-                <a href="https://www.facebook.com/nguyenlong.crazy/">
-                  <i class="fab fa-facebook"></i> Long NH
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/long-nguyen12">
-                  <i class="fab fa-github"></i> long-nguyen12
-                </a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/longnh12/">
-                  <i class="fab fa-linkedin"></i> Long Nguyen Hoang
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+
+      <div id="footer">
+        <footer-component></footer-component>
+        <footer-component-lemos></footer-component-lemos>
       </div>
-      <div id="footer"></div>
     </div>
+
+    <script src="/assets/vendor/jquery/jquery.slim.min.js"></script>
+    <script src="/assets/vendor/bootstrap/js/popper.min.js"></script>
+    <script src="/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="/assets/js/main.js"></script>
+    <script src="/components/header.js"></script>
+    <script src="/components/footer.js"></script>
+    <script src="/components/footer-lemos.js"></script>
+    <script src="/assets/js/fontawesome651all.min.js" defer></script>
   </body>
 </html>
