--- a/pages/misc.html
+++ b/pages/misc.html
@@ -50,9 +50,22 @@
             </div>
           </div>
         </div>
-
-        <h4 class="mt-4"><b>2022</b></h4>
       </div>
+
+      <div class="container mt-4">
+        <h5><b>__ Some links ______________</b></h5>
+
+        <div class="mt-3 card">
+          <div class="card-body">
+            <div class="row mt-2 mt-md-0">
+              <div class="col-12 col-md-12">
+                To be updated soon. Please check back later for more information.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div id="footer">
         <footer-component></footer-component>
         <footer-component-lemos></footer-component-lemos>
