update new publication

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -43,6 +43,63 @@
         <div class="articles-card p-3">
           <ol class="pl-3">
             <li class="pl-2 text-left">
+              <span class="ref-journal">[Journal] </span>Nguyen, Dinh Cong;
+              <span class="ref-author-lemos">Nguyen, Hoang Long</span>.
+              <span
+                ><a href="#" target=""
+                  >"Enhancing Infrared Small Target Detection: A Multi-scale
+                  Feature Integration Approach with an Optimized Combined Loss
+                  Function".</a
+                ></span
+              >
+              N COMPUT. SCI. 7, 192 (2026).<span class="pr-2"></span>
+              <p>
+                <!-- <button type="button" class="btn btn-blue btn-sm">
+                  <a href="#" target=""
+                    >PDF <i class="ml-1 fa-regular fa-file-pdf"></i
+                  ></a>
+                </button> -->
+
+                <!-- BibTeX toggle button -->
+                <button
+                  class="ml-1 btn btn-blue btn-sm"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#collapseBibtex-prp-1"
+                  aria-expanded="false"
+                  aria-controls="collapseBibtex-prp-1"
+                >
+                  BibTeX <i class="ml-1 fa-solid fa-quote-right"></i>
+                </button>
+              </p>
+              <!-- BibTeX card -->
+              <div
+                id="collapseBibtex-prp-1"
+                class="collapse mt-2 mb-0 bibtex-card position-relative"
+              >
+                <!-- Copy button (top right) -->
+                <button
+                  class="btn btn-sm position-absolute bibtex-copy-btn py-0"
+                  onclick="copyBibtex('bibtex-prp-1')"
+                >
+                  <i class="fa-regular fa-copy"></i>
+                </button>
+
+                <!-- BibTeX content -->
+                <pre id="bibtex-prp-1" class="p-3 mb-0 text-left">
+                @article{Nguyen2026,
+                  title={Enhancing Infrared Small Target Detection: A Multi-scale Feature Integration Approach with an Optimized Combined Loss Function},
+                  author={Nguyen, Dinh Cong and Nguyen, Hoang Long},
+                  journal={N COMPUT. SCI.},
+                  volume={7},
+                  pages={192},
+                  year={2026},
+                  publisher={Springer}
+                }
+                </pre>
+              </div>
+            </li>
+            <li class="pl-2 text-left">
               <span class="ref-journal">[Journal] </span>Nguyen, Hoang-Long;
               <span class="ref-author-lemos">Nguyen, Hoang Long</span>; Dinh,
               Phu-Hung; Giang, Nguyen Long; others.
