update some links

--- a/pages/misc.html
+++ b/pages/misc.html
@@ -59,7 +59,87 @@
           <div class="card-body">
             <div class="row mt-2 mt-md-0">
               <div class="col-12 col-md-12">
-                To be updated soon. Please check back later for more information.
+                <h6><b>Supervisors</b></h6>
+                <ul class="list-unstyled mb-2">
+                  <li class="pl-4">
+                    <a
+                      href="https://dinhcong-nguyen.github.io/index.html"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      Dr. Dinh Cong Nguyen
+                    </a>
+                  </li>
+                  <li class="pl-4">
+                    <a
+                      href="https://www.univ-tours.fr/annuaire/m-nicolas-ragot"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      Assoc.Prof. Nicolas RAGOT
+                    </a>
+                  </li>
+                  <li class="pl-4">
+                    <a
+                      href="http://frederic.rayar.free.fr/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      Asst. Prof. Frédéric RAYAR
+                    </a>
+                  </li>
+                  <li class="pl-4">
+                    <a
+                      href="http://mathieu.delalandre.free.fr/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      Assoc.Prof. Mathieu DELALANDRE
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-12 col-md-12 mt-3">
+                <h6><b>Laboratories and Universities</b></h6>
+                <ul class="list-unstyled mb-2">
+                  <li class="pl-4">
+                    <a
+                      href="https://www.rfai.lifat.univ-tours.fr/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      RFAI team
+                    </a>
+                  </li>
+                  <li class="pl-4">
+                    <a
+                      href="https://lifat.univ-tours.fr/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      Laboratory of Fundamental and Applied Computer Science of
+                      Tours
+                    </a>
+                  </li>
+                  <li class="pl-4">
+                    <a
+                      href="https://polytech.univ-tours.fr/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      Polytech Tours
+                    </a>
+                  </li>
+                  <li class="pl-4">
+                    <a
+                      href="https://cntt.hdu.edu.vn/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      FETC, HDU
+                    </a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
