--- a/pages/education.html
+++ b/pages/education.html
@@ -95,37 +95,6 @@
                     >
                   </li>
                 </ul>
-                <!-- <p><b>Activities :</b></p>
-                <div class="row">
-                  <div class="col-12">
-                    <ul class="pb-0 mb-1">
-                      <li class="activity-lemos">
-                        <span class="activity-names">Activity 1 :</span>
-                        <a href="#" target="">Reference Link</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div> -->
-                <!-- <div class="row">
-                  <div class="col-12">
-                    <ul class="pb-0 mb-1">
-                      <li class="activity-lemos">
-                        <span class="activity-names">Activity 2 :</span>
-                        <a href="#" target="">Reference Link</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <ul class="pb-0 mb-1">
-                      <li class="activity-lemos">
-                        <span class="activity-names">Activity 3 :</span>
-                        <a href="#" target="">Reference Link</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div> -->
               </div>
             </div>
           </div>
@@ -148,7 +117,8 @@
                   Hong Duc University, Thanh Hoa, Vietnam
                 </h4>
                 <h6 class="small-lemos text-center text-md-left">
-                  <span class="span-lemos pr-2">Thanh Hoa, Vietnam</span> (12/2022 - 06/2024)
+                  <span class="span-lemos pr-2">Thanh Hoa, Vietnam</span>
+                  (12/2022 - 06/2024)
                 </h6>
                 <h6 class="card-subtitle mt-2 text-center text-md-left mb-3">
                   M.S. in Computer Science
@@ -159,7 +129,12 @@
                   images.
                 </p>
                 <p class="mt-0 pt-0">
-                  <b>Supervisor:</b> <a>Dinh Cong NGUYEN</a>
+                  <b>Supervisor:</b>
+                  <a
+                    href="https://dinhcong-nguyen.github.io/index.html"
+                    target="_blank"
+                    >Dinh Cong NGUYEN
+                  </a>
                 </p>
               </div>
             </div>
@@ -183,8 +158,8 @@
                   Hong Duc University, Thanh Hoa, Vietnam
                 </h4>
                 <h6 class="small-lemos text-center text-md-left">
-                  <span class="span-lemos pr-2">Thanh Hoa, Vietnam</span> (09/2018 -
-                  09/2022)
+                  <span class="span-lemos pr-2">Thanh Hoa, Vietnam</span>
+                  (09/2018 - 09/2022)
                 </h6>
                 <h6 class="card-subtitle mt-2 text-center text-md-left mb-3">
                   B.Sc. in Computer Science
@@ -194,7 +169,12 @@
                   classify rice diseases using convolutional neural networks.
                 </p>
                 <p class="mt-0 pt-0">
-                  <b>Supervisor:</b> <a>Dinh Cong NGUYEN</a>
+                  <b>Supervisor:</b>
+                  <a
+                    href="https://dinhcong-nguyen.github.io/index.html"
+                    target="_blank"
+                    >Dinh Cong NGUYEN
+                  </a>
                 </p>
               </div>
             </div>
