--- a/pages/misc.html
+++ b/pages/misc.html
@@ -36,16 +36,10 @@
           <div class="card-body">
             <div class="row mt-2 mt-md-0">
               <div class="col-12 col-md-12">
-                <h4 class="card-title mb-0 responsive-text">
-                  <a class="blog-name">English</a>
-                </h4>
-                <h6 class="small-lemos mt-1">
-                  Professional working proficiency
-                </h6>
-                <h4 class="card-title mb-0 responsive-text">
-                  <a class="blog-name">Vietnamese</a>
-                </h4>
-                <h6 class="small-lemos mt-1">Native</h6>
+                <h5><b>English</b></h5>
+                <p class="mt-0">Professional working proficiency</p>
+                <h5><b>Vietnamese</b></h5>
+                <p class="mt-0">Native</p>
               </div>
             </div>
           </div>
@@ -54,7 +48,6 @@
 
       <div class="container mt-4">
         <h5><b>__ Some links ______________</b></h5>
-
         <div class="mt-3 card">
           <div class="card-body">
             <div class="row mt-2 mt-md-0">
