--- a/pages/publications.html
+++ b/pages/publications.html
@@ -52,7 +52,7 @@
                   Function".</a
                 ></span
               >
-              N COMPUT. SCI. 7, 192 (2026).<span class="pr-2"></span>
+              SN COMPUT. SCI. 7, 192 (2026).<span class="pr-2"></span>
               <p>
                 <!-- <button type="button" class="btn btn-blue btn-sm">
                   <a href="#" target=""
