update new publication

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -43,6 +43,68 @@
         <div class="articles-card p-3">
           <ol class="pl-3">
             <li class="pl-2 text-left">
+              <span class="ref-journal">[Journal] </span>Pham, Quang Nam; Hoang
+              Trung Nguyen;
+              <span class="ref-author-lemos">Nguyen, Hoang Long</span>;
+              Thi-Hong-Ha Le; Hoang-Long Nguyen; and Long Giang Nguyen.
+              <span
+                ><a href="#" target=""
+                  >"TSDFusion: a new medical image fusion method based on
+                  transformer and dynamic threshold neural P system".</a
+                ></span
+              >
+              The Imaging Science Journal, February, 1–17 (2026).
+              doi:10.1080/13682199.2026.2635216.<span class="pr-2"></span>
+              <p>
+                <!-- <button type="button" class="btn btn-blue btn-sm">
+                  <a href="#" target=""
+                    >PDF <i class="ml-1 fa-regular fa-file-pdf"></i
+                  ></a>
+                </button> -->
+
+                <!-- BibTeX toggle button -->
+                <button
+                  class="ml-1 btn btn-blue btn-sm"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#collapseBibtex-prp-9"
+                  aria-expanded="false"
+                  aria-controls="collapseBibtex-prp-9"
+                >
+                  BibTeX <i class="ml-1 fa-solid fa-quote-right"></i>
+                </button>
+              </p>
+              <!-- BibTeX card -->
+              <div
+                id="collapseBibtex-prp-9"
+                class="collapse mt-2 mb-0 bibtex-card position-relative"
+              >
+                <!-- Copy button (top right) -->
+                <button
+                  class="btn btn-sm position-absolute bibtex-copy-btn py-0"
+                  onclick="copyBibtex('bibtex-prp-8')"
+                >
+                  <i class="fa-regular fa-copy"></i>
+                </button>
+
+                <!-- BibTeX content -->
+                <pre id="bibtex-prp-8" class="p-3 mb-0 text-left">
+@article{Pham26022026,
+author = {Quang Nam Pham and Hoang Trung Nguyen and Hoang Long Nguyen and Thi-Hong-Ha Le and Hoang-Long Nguyen and Long Giang Nguyen},
+title = {TSDFusion: a new medical image fusion method based on transformer and dynamic threshold neural P system},
+journal = {The Imaging Science Journal},
+volume = {0},
+number = {0},
+pages = {1--17},
+year = {2026},
+publisher = {Taylor \& Francis},
+doi = {10.1080/13682199.2026.2635216}
+}
+</pre
+                >
+              </div>
+            </li>
+            <li class="pl-2 text-left">
               <span class="ref-journal">[Journal] </span>Nguyen, Dinh Cong;
               <span class="ref-author-lemos">Nguyen, Hoang Long</span>.
               <span
@@ -96,7 +158,8 @@
   year={2026},
   publisher={Springer}
 }
-</pre>
+</pre
+                >
               </div>
             </li>
             <li class="pl-2 text-left">
